<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yarrn!</string>
    <string name="action_settings">Settings</string>

    <string name="api_callback">x-oauthflow://de.vanmar.android.yarrn</string>

    <string name="my_projects_title">My Projects</string>

    <string name="projectimage">Image</string>
    <string name="photo">Image</string>

    <string name="gallery_upload">Upload photo</string>
    <string name="take_photo">Snap Photo</string>

    <string name="network_not_available">No Internet connection</string>
    <string name="connection_timeout">Connection to Ravelry timed out</string>
    <string name="menu_my_projects">My Projects</string>
    <string name="settings_change_user">Change User</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_drawer">Go to…</string>
    <string name="upload_successful">Upload successful. Refresh when image is processed on server.</string>
    <string name="menu_open_ravelry">Open Ravelry</string>
    <string name="open_ravelry_url">http://m.ravelry.com/</string>
    <string name="started_title">Started:</string>
    <string name="completed_title">Finished:</string>
    <string name="date_unknown">-</string>
    <string name="notes_title">Notes</string>
    <string name="menu_my_favorites">My Favorites</string>
    <string name="menu_my_queues">My Queues</string>
    <string name="my_favorites_title">My Favorites</string>
    <string name="upload_started">Starting upload…</string>
    <string name="gauge_title">gauge: </string>
    <string name="yarn_title">yarn: </string>
    <string name="yardage_title">yardage: </string>
    <string name="needles_title">needles: </string>
    <string name="load_more">More…</string>
    <string name="loading">Loading…</string>
    <string name="sort_title">Sort by:</string>
    <string name="search_title">Search</string>
    <string name="favorite_search_hint">Search for</string>
    <string name="reorder_photos">Change photo order</string>

    <string name="crash_toast_text">An unexpected error has occurred! Collecting crash data.</string>
    <string name="crash_dialog_title">Yarrn! has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="settings_send_feedback">Send Feedback</string>
    <string name="feedback_mail">vanmar.development@gmail.com</string>
    <string name="cannot_send_mail">Unable to start mail application</string>
    <string name="feedback_mail_subject">Feedback for Yarrn!</string>
    <string name="my_stashes_title">My Stashes</string>
    <string name="menu_my_stashes">My Stashes</string>
    <string name="stash_color_title">Color:</string>
    <string name="ply">ply</string>
    <string name="settings_error_reports">Send error reports to developer</string>
    <string name="menu_open_settings">Settings</string>
    <string name="settings_about">About Yarrn!</string>
    <string name="settings_title">Settings</string>
    <string name="unexpected_exception">An unexpected error occurred</string>
    <string name="io_exception">Problem connecting to Ravelry</string>
    <string name="oauth_exception">Problem logging into Ravelry. Please try again later.</string>
    <string name="project_search_hint">Search for</string>
    <string name="search_projects_title">Search Projects</string>
    <string name="menu_project_search">Search Projects</string>
    <string name="add_search_by">Add filter</string>
    <string name="search_by_user_hint">username</string>
    <string name="search_by_self_title">By Myself</string>
    <string name="search_by_friends_title">By Friends</string>
    <string name="search_by_anyone_title">By Anyone</string>
    <string name="search_by_user_title">By</string>
    <string name="menu_pattern_search">Search Patterns</string>
    <string name="search_patterns_title">Search Patterns</string>
    <string name="search_stashes_title">Search Stashes</string>
    <string name="menu_stash_search">Search Stashes</string>
    <string name="search_criteria_name">Creator</string>
    <string name="search_criteria_craft">Craft</string>
    <string name="search_by_title">Search by</string>
    <string name="search_craft_knitting">Knitting</string>
    <string name="search_craft_weaving">Weaving</string>
    <string name="search_craft_crochet">Crochet</string>
    <string name="add_project_as_favorite">Add as Favorite</string>
    <string name="add_pattern_as_favorite">Add as Favorite</string>
    <string name="favorite_comment_title">Comment:</string>
    <string name="favorite_tags_title">Tags:</string>
    <string name="save_favorite">Save</string>
    <string name="cancel_favorite">Cancel</string>
    <string name="add_favorite_title">Add Favorite</string>
    <string name="add_favorite_success">Favorite created.</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="favorite_deleted">Favorite deleted.</string>
    <string name="edit_favorite">Edit Favorite</string>
    <string name="edit_favorite_title">Edit Favorite</string>
    <string name="edit_favorite_success">Favorite updated.</string>
    <string name="my_queues_title">My Queues</string>
</resources>