<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/border">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/change_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsItem"
            android:text="@string/settings_change_user" />

        <View style="@style/divider_line" />

        <TextView
            android:id="@+id/send_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsItem"
            android:text="@string/settings_send_feedback" />

        <View style="@style/divider_line" />

        <CheckBox
            android:id="@+id/sendErrorReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsItem"
            android:text="@string/settings_error_reports" />

        <View style="@style/divider_line" />

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsItem"
            android:text="@string/settings_about" />

    </LinearLayout>

</ScrollView>
